[metadata]
# replace with your username:
name = PiAPI
version = 0.0.2
author = Bolillo Kremer
author_email = author@example.com
description = This package allows you to easily interface with PiAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bolillo-Kremer/PiAPI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = [
    'requests'
]